2010-10-28  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Adam Roben.

        Seeking by very small increment doesn't generate 'seeked' event
        https://bugs.webkit.org/show_bug.cgi?id=48530

        Test: media/video-seek-by-small-increment.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::seek): Ask the media engine for its closest time value so we can
        avoid asking it to seek to the current time.

        * platform/graphics/MediaPlayer.cpp:
        (WebCore::MediaPlayer::mediaTimeForTimeValue): New.
        * platform/graphics/MediaPlayer.h:
        * platform/graphics/MediaPlayerPrivate.h:
        (WebCore::MediaPlayerPrivateInterface::mediaTimeForTimeValue): Ditto.

        * platform/graphics/mac/MediaPlayerPrivateQTKit.h:
        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::MediaPlayerPrivate::mediaTimeForTimeValue): Return the closest value in the movie's time scale.

        * platform/graphics/win/MediaPlayerPrivateQuickTimeVisualContext.cpp:
        (WebCore::MediaPlayerPrivateQuickTimeVisualContext::mediaTimeForTimeValue): Ditto
        * platform/graphics/win/MediaPlayerPrivateQuickTimeVisualContext.h:

        * platform/graphics/win/QTMovie.cpp:
        (QTMovie::timeScale): Return the movie's time scale.
        * platform/graphics/win/QTMovie.h:

2010-10-28  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Adam Roben.

        Seeking by very small increment doesn't generate 'seeked' event
        https://bugs.webkit.org/show_bug.cgi?id=48530

        * media/video-seek-by-small-increment-expected.txt: Added.
        * media/video-seek-by-small-increment.html: Added.



Canonical link: https://commits.webkit.org/61326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70814 268f45cc-cd09-0410-ab3c-d52691b4dbfc