WebCore/platform/graphics/MediaPlayer.h
@@ -274,6 +274,8 @@ public:
 
     bool hasSingleSecurityOrigin() const;
 
+    float mediaTimeForTimeValue(float) const;
+
 private:
     MediaPlayer(MediaPlayerClient*);
 
